# aeds

./: CMakeLists.txt  README.md  main.cpp
lista2/: impares.cpp  inverte_vetor.cpp  merge_sort.cpp  ordenacao_insercao.cpp  ordenacao_selecao.cpp  soma_quadrados.cpp  verifica_ordenacao.cpp
projeto-pratico/: generate_graph.py  pom.xml  sort_results.csv
projeto-pratico/src/main/java/org/example/: Main.java
projeto-pratico/src/main/java/org/example/algoritmos_ordenacao/: BubbleSort.java  InsertionSort.java  MergeSort.java  QuickSort.java  SelectionSort.java
recursive/: concat_vet.cpp
